2012-05-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/msgdb.boot: wordFrom(): Do not ignore
	underscores.

2012-04-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/si.spad.pamphlet: Fix 'random()'.

2012-04-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Add modular polynomial gcd over algebraic extensions.
	* src/algebra/amodgcd.spad.pamphlet: New file.
	src/algebra/Makefile.in: Adjust.
	src/input/agcd.input.pamphlet,
	src/input/Makefile.in: Add tests.

2012-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet,
	src/algebra/Makefile.in: Add numeric Liouvilian functions.

2012-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/modhpsol.spad.pamphlet: Export
	modpreduction, add little speedup.

2012-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/setq.lisp: Add SortedExponentVector
	to $optimizableConstructorNames.

2012-03-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/format.boot: Correct unparsing of
	argumentless function calls.

2012-03-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/liouv.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet: Change derivatives
	of fresnelC and fresnelS.

2012-03-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special3.spad.pamphlet: Add complex
	ellipticF and ellipticE.

2012-03-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/expr.spad.pamphlet:  Add missing jacobiZeta.

2012-03-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in: Workaround for noweb build problem on
	MacOS 10.7.

2012-03-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet: Fix derivatives
	of meijerG.

2012-03-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-util.boot: Fix compilation of nested if-s.
	src/algebra/allfact.spad.pamphlet,
	src/algebra/rdeef.spad.pamphlet: Fix wrong code uncoverd