@@ -1,3 +1,10 @@
+2012-05-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/g-error.boot, src/interp/spaderror.lisp:
+	Support trapping errors.
+	src/algebra/numeric.spad.pamphlet: Trap errors in
+	'numericIfCan'.
+
 2012-05-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/msgdb.boot: wordFrom(): Do not ignore
